# nestwatch

./: .gitignore  LICENSE.MIT  README.md  main.py  pyproject.toml
nestwatch/core/: __init__.py  events.py  observer.py
nestwatch/watchers/: __init__.py  json.py  toml.py  watcher.py  yaml.py
