[project]
name = "nestwatch"
description = "A simple file watcher for JSON files.."
version = "0.0.3"
requires-python = ">=3.10"

dependencies = [
    "watchdog>=6.0.0"
]

authors = [
    { name = "MrBaconHat" }
]

readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"