[project]
name = "nestwatch"
version = "0.0.5"

description = "Reactive file state management for Python."

readme = "README.md"

license = "MIT"

requires-python = ">=3.10"

authors = [
  { name = "MrBaconHat" }
]

dependencies = [
  "watchdog>=6.0.0"
]

keywords = [
  "watcher",
  "file-watcher",
  "json",
  "cache",
  "config",
  "discord",
  "fastapi",
  "events",
  "realtime",
  "reload",
  "filesystem"
]

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",

  "Programming Language :: Python :: 3.10",

  "Programming Language :: Python :: 3.11",

  "Programming Language :: Python :: 3.12",

  "Topic :: Software Development :: Libraries",

  "Topic :: System :: Monitoring",

  "Operating System :: OS Independent"
]